--- a/style.css
+++ b/style.css
@@ -1,5 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Muli:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/cssfamily=Muli&display=swap');
 
 * {
     box-sizing: border-box;
+}
+
+
+body {
+    background-color: #ffffff ;
+    font-family: 'Muli' , sans-serif;
+    display: flex ;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    margin: 0;
+}
+
+.container{
+ text-align: center;
+}
+
+.progess-container{
+   display: flex;
+   justify-content: space-between; 
+   position: relative;
+   margin-bottom: 30px;
+   max-width: 100%;
+   width: 350px;
+}
+
+
+.progress-container::before {
+    content: '' ;
+    background-color: #e0e0e0;
+    position: absolute;
+    top: 50% ;
+    left: 0;
+    transform: translateY(-50%) ;
+    height: 4px;
+    width: 0%;
+    z-index: -1;
+}
+
+.progress{
+    background-color: #3498db;
+    position: absolute;
+    top: 50% ;
+    left: 0;
+    transform: translateY(-50%);
+    height: 4px;
+    width: 0%;
+    z-index: -1;
+    transition: 0.4s ease;
+}
+
+.circle{
+    background-color: #ffff;
+    color: #999;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    display: flex;
 }
